bisonc++ (4.10.00) 

  * FOLLOW sets are not used when analyzing LALR(1) grammars. The class
    FollowSet and all operations on follow sets were removed.

  * The LA set computation algorithm was reimplemented, a description of the 
    new algorithm is included in the manual and in several source files, in
    particular state/determinelasets.cc. Both the state items' LA computation
    and the LA propagation algorithms were completely reimplemented.

  * Rules causing conflicts (i.e., conflict remaining after processing %left,
    %right, %nonassoc and/or %expect) as wel as the involved LA characters re
    briefly mentioned immediately following the SR/RR conflict-counts.

  * The class Symtab now uses an unordered_map rather than a mere (ordered)
    map.

  * The class-dependency diagram (README.class-setup) was updated to reflect
    the latest changes. Same for the file CLASSES which is used by the build
    script. 

  * Added the file `required' listing the non-standard software that is
    required to build bisonc++ and its user guide / man-page

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 17 May 2015 13:13:55 +0200

bisonc++ (4.09.02) 

  * Wilko Kuiper reported an annoying bug in the skeleton lex.in, causing the
    compilation of parser.ih to fail. This release fixes that bug.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 28 Jul 2014 16:46:35 +0200

bisonc++ (4.09.01) 

  * $#$#@ !! Forgot to update the help-info (bisonc++ --help) to reflect the
    new -D option. Now fixed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 11 May 2014 09:05:48 +0200

bisonc++ (4.09.00) 

  * Added option --no-decoration (-D), suppressing the actions that are
    normally associated with matched rules.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 10 May 2014 11:58:46 +0200

bisonc++ (4.08.01) 

  * Members of the class `Generator' generating a substantial amount of code
    now read skeleton files instead of strings which are defined in these