@@ -12,14 +12,13 @@ void State::allStates()
         imsg << 
     "\n"
     "For each state information like the following is shown for its items:\n"
-    "   0: [P1 1] S -> C  . C   { <EOF> }  0, (1 2 ) 0\n"
+    "   0: [P1 1] S -> C  . C   { <EOF> }  0\n"
     "which should be read as follows:\n"
     "   0:          The item's index\n"
     "   [P1 1]:     The rule (production) number and current dot-position\n"
     "   S -> C . C: The item (lhs -> Recognized-symbols . "
                                                   "symbols-to-recognize)\n"
     "   { <EOF> }   The item's lookahead (LA) set\n"
-    "   (1 2)       Item indices of items whose LA sets depend on this item\n"
     "   0           The next-element (shown below the items) describing the\n"
     "               action associated with this item (-1 for reducible "
                                                             "items)\n"
