@@ -21,6 +21,12 @@
 using namespace std;
 using namespace FBB;
 
+inline void State::addDependents(Next const &next, Symbol const *symbol, 
+                                 size_t idx)
+{
+    d_itemVector[idx].setNext(Next::addToKernel(d_nextVector, symbol, idx));
+}
+
 inline std::ostream &State::skipInsertion(std::ostream &out) const
 {
     return out;
