@@ -3,6 +3,4 @@
 StateItem::StateItem()
 :
     d_nextIdx(string::npos)
-//    ,
-//    d_nextItem(string::npos)
 {}
