@@ -4,6 +4,4 @@ StateItem::StateItem(Item const &item)
 :
     d_item(item),
     d_nextIdx(string::npos)
-//    ,
-//    d_nextItem(string::npos)
 {}
